--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi Bhargab! I am your webapp.
+	    <br>
+	    This is from localhost.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
