[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,5 +1,12 @@
 <html>
-  <body>
-    New file article one
-  </body>
+<head>
+    <title>
+        Article one
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+            </div>
+        </body>
 </html>
