[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,10 +3,17 @@
     <title>
         Article One
         </title>
+    <style>
+        .comtainer{
+            max-width: 800px;
+            padding-top: 60px;
+            margin: 0 auto;
+        }
+        </style>
     </head>
     <body>
         <div>
-            <div>
+            <div class="container">
                 <a href="/">Home</a>
                 </div>
                 <hr/>
