[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
         Article One
         </title>
     <style>
-        .comtainer{
+        .container{
             max-width: 800px;
             padding-top: 60px;
             margin: 0 auto;
