--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,6 +7,8 @@
         .container{
             max-width: 800px;
             padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
             margin: 0 auto;
         }
         </style>
