--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,15 +3,7 @@
     <title>
         Article One
         </title>
-    <style>
-        .container{
-            max-width: 800px;
-            padding-top: 60px;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin: 0 auto;
-        }
-        </style>
+    <link href="/ui/style.css" rel="styleshett"/>
     </head>
     <body>
         <div class="container">
