--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
     <title>
         Article One
         </title>
-    <link href="/ui/style.css" rel="styleshett"/>
+    <link href="/ui/style.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="container">
