[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
 	    <br>
 	        This is from localhost.
         </div>
+        <script>
+            alert("Hi Bhargab...");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
