[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
 	        This is from localhost.
         </div>
         <script>
-            alert("Hi Bhargab...");
+            alert('Hi Bhargab...');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
