[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,15 +7,18 @@
         <div id="madi" class="center">
             <img src="https://pbs.twimg.com/profile_images/868083915239473152/tHtICTJJ_400x400.jpg" class="img-medium"/>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi Bhargab! I am your webapp.
-	    <br>
-	        This is from localhost.
+        <hr/>
+        <h3>Personal</h3>
+        <div>
+            Hi.. My name is Bhargab
         </div>
-        <script>
-            alert('Hi Bhargab...');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+            I work at IITG
+        </div>
+        <div class="footer">
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
