--- a/ui/index.html
+++ b/ui/index.html
@@ -4,20 +4,22 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="madi" class="center">
-            <img src="https://pbs.twimg.com/profile_images/868083915239473152/tHtICTJJ_400x400.jpg" class="img-medium"/>
-        </div>
-        <hr/>
-        <h3>Personal</h3>
-        <div>
-            Hi.. My name is Bhargab
-        </div>
-        <hr/>
-        <h3>Professional</h3>
-        <div>
-            I work at IITG
-        </div>
-        <div class="footer">
+        <div class="container">
+            <div id="madi" class="center">
+                <img src="https://pbs.twimg.com/profile_images/868083915239473152/tHtICTJJ_400x400.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <h3>Personal</h3>
+            <div>
+                Hi.. My name is Bhargab
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I work at IITG
+            </div>
+            <div class="footer">
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
