--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,7 @@
                 I work at IITG
             </div>
             <div class="footer">
+                This button <button id="counter"></button> has been clicked <span id="count">0</span> times
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
