--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,9 @@
             <div class="footer">
                 This button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times
             </div>
+            <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="Submit"></input>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
