--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
             </div>
             <hr/>
             <input type="text" id="name" placeholder="name"></input>
-            <input type="submit" value="Submit"></input>
+            <input type="submit" value="Submit" id="submit_btn"></input>
             
         </div>
         <script type="text/javascript" src="/ui/main.js">
